--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
+/** @format */
+
 .App {
   text-align: center;
+  display: flex;
+  background-color: #212121;
+  justify-content: center;
 }
 
 .App-logo {
