Added Navbar Component

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,8 @@
   display: flex;
   background-color: #212121;
   justify-content: center;
+  flex-direction: column;
+  font-family: cursive;
 }
 
 .App-logo {
