--- a/src/components/Cards/Card.css
+++ b/src/components/Cards/Card.css
@@ -16,7 +16,7 @@
 
 .line-cut {
   background-color: white;
-  width: 10%;
+  width: 100%;
   height: 0.1rem;
   position: absolute;
 }
@@ -28,18 +28,22 @@
   padding: 0.5rem;
   border: 1px solid #fff;
   border-radius: 10px;
-  margin-top: 1.5rem;
+  margin-top: 0.2rem;
   font-size: 1rem;
+  cursor: pointer;
 }
 
 .card__price {
   color: white;
   font-size: 1.5rem;
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: -0.5rem;
 }
 
 .card {
   width: 300px;
-  height: 420px;
+  height: 330px;
   background-color: #232323;
   border-radius: 20px;
   overflow: hidden;
@@ -61,7 +65,7 @@
 }
 
 .card:after {
-  content: "Angry";
+  content: "";
   position: absolute;
   top: 30%;
   left: -20%;
@@ -112,6 +116,7 @@
   font-weight: 600;
   letter-spacing: 1px;
   color: white;
+  margin-top: 6rem;
 }
 
 .card__size,
@@ -197,9 +202,5 @@
     grid-template-columns: auto;
     gap: 1rem;
     margin: 1rem;
-  }
-
-  .card {
-    width: 300px;
   }
 }
