--- a/src/components/Cards/Card.css
+++ b/src/components/Cards/Card.css
@@ -5,12 +5,13 @@
   grid-template-columns: auto auto auto;
   gap: 2rem;
   margin: 3rem;
+  justify-content: center;
 }
 
 .card-price-container {
   position: relative;
   display: flex;
-  align-items: center;
+  align-items: space-between;
   justify-content: center;
 }
 
@@ -19,6 +20,7 @@
   width: 100%;
   height: 0.1rem;
   position: absolute;
+  margin-top: 1rem;
 }
 
 .btn-card {
@@ -31,6 +33,12 @@
   margin-top: 0.2rem;
   font-size: 1rem;
   cursor: pointer;
+}
+
+.btn-card:hover {
+  color: black;
+  background-color: #fff;
+  transition: background-color 2s;
 }
 
 .card__price {
@@ -198,6 +206,14 @@
 }
 
 @media all and (max-width: 900px) {
+  .card-flex {
+    grid-template-columns: auto auto;
+    gap: 1rem;
+    margin: 1rem;
+  }
+}
+
+@media all and (max-width: 650px) {
   .card-flex {
     grid-template-columns: auto;
     gap: 1rem;
