--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,7 +4,7 @@
   background: #9b2226;
   height: 80px;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   font-size: 1.2rem;
 }
@@ -14,11 +14,16 @@
   justify-self: start;
   margin-left: 20px;
   cursor: pointer;
+  font-size: 1.2rem;
 }
 
-.fa-react {
-  margin-left: 0.5rem;
-  font-size: 1.6rem;
+.navbar-hamburger {
+  color: white;
+  font-size: 2rem;
+  margin-left: 20px;
+  cursor: pointer;
+  display: flex;
+  gap: 1rem;
 }
 
 .nav-menu {
@@ -49,20 +54,13 @@
   transition: all 0.2s ease-out;
 }
 
-.fa-bars {
-  color: #fff;
+.nav-links-container {
+  display: flex;
 }
 
-.nav-links-mobile {
-  display: none;
-}
-
-.menu-icon {
-  display: none;
-}
-
-.sign-in {
-  width: 10%;
+.signin-button,
+.login-button {
+  width: 10rem;
   background-color: rgba(255, 255, 255, 0);
   color: #fff;
   padding: 0.5rem;
@@ -74,9 +72,30 @@
   margin-right: 1rem;
 }
 
+.nav-buttons {
+  display: flex;
+}
+
+.login-button:hover,
+.signin-button:hover {
+  color: black;
+  background-color: #fff;
+  transition: background-color 2s;
+}
+
 @media (max-width: 960px) {
   .navbar {
     position: relative;
     z-index: 5;
+  }
+  .navbar-logo {
+    font-size: 0.8rem;
+  }
+  .nav-links-container {
+    display: none;
+  }
+  .signin-button,
+  .login-button {
+    width: 6rem;
   }
 }
