--- a/src/components/Cards/Card.css
+++ b/src/components/Cards/Card.css
@@ -6,6 +6,8 @@
   gap: 2rem;
   margin: 3rem;
   justify-content: center;
+  background-color: #212121;
+  height: 110vh;
 }
 
 .card-price-container {
@@ -24,7 +26,7 @@
 }
 
 .btn-card {
-  width: 50%;
+  width: 45%;
   background-color: rgba(255, 255, 255, 0);
   color: #fff;
   padding: 0.5rem;
@@ -33,6 +35,7 @@
   margin-top: 0.2rem;
   font-size: 1rem;
   cursor: pointer;
+  margin-right: 0.5rem;
 }
 
 .btn-card:hover {
@@ -225,7 +228,8 @@
   .card-flex {
     grid-template-columns: auto;
     gap: 1rem;
-    margin: 1rem;
+    margin: 3rem;
+    margin-left: 3rem;
   }
   .card-flex {
     margin-top: 42rem;
