--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,7 +1,20 @@
 /** @format */
 
 .cart {
-  width: 100%;
-  height: 100vh;
+  width: 98vw;
+  height: 300vh;
   background-color: #212121;
+  display: flex;
+  justify-content: center;
+  color: white;
+  flex-wrap: wrap;
+}
+
+@media all and (max-width: 1450px) {
+  .cart {
+    display: grid;
+    grid-template-columns: auto;
+    width: 100vw;
+    height: 500vh;
+  }
 }
