--- a/src/components/Wishlist/Wishlist.css
+++ b/src/components/Wishlist/Wishlist.css
@@ -12,6 +12,13 @@
   flex-wrap: wrap;
 }
 
+.wishlist-container {
+  color: white;
+  font-size: 1.5rem;
+  font-weight: bold;
+  font-family: cursive;
+}
+
 .Wishlist {
   height: 100%;
   background-color: #212121;
